[package]
authors = ["Trent Shailer"]
edition = "2024"
license = "MIT OR Apache-2.0"
name = "ec-to-jwk"
rust-version = "1.85"
version = "0.2.0"

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

clap = { version = "4.5", features = ["derive"] }
cli-helper = { git = "https://github.com/trentshailer/cli-helper", rev = "724db57" }
