[package]
authors = ["Trent Shailer"]
description = "CLI for converting a PEM public key to its parameters"
edition = "2024"
license = "MIT OR Apache-2.0"
name = "pem-params"
rust-version = "1.88"
version = "0.4.0"

[dependencies]
base64ct = { version = "1.8", features = ["alloc"] }
openssl = { version = "0.10" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

clap = { version = "4.5", features = ["derive"] }
ts-cli-helper = { version = "0.5" }
ts-rust-helper = { version = "0.1" }

[features]
vendor-openssl = ["openssl/vendored"]
